--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "pinch-zoom-pan",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "A react component that lets you add pinch-zoom and pan sub components",
-  "main": "dist/index.js",
-  "typings": "index.d.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "sideEffects": false,
   "scripts": {
-    "start": "tsc --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "size": "npm run build && size-limit"
   },
   "repository": {
     "type": "git",
@@ -15,8 +16,7 @@
   "author": "Sanich Kotikov <sancho@cdrpro.ru> (https://sanichkotikov.github.io)",
   "license": "MIT",
   "files": [
-    "dist",
-    "index.d.ts"
+    "lib"
   ],
   "keywords": [
     "react",
@@ -31,11 +31,20 @@
   "bugs": {
     "url": "https://github.com/SanichKotikov/pinch-zoom-pan/issues"
   },
-  "devDependencies": {
-    "@types/react": "16.0.35",
-    "react": "16.2.0",
-    "typescript": "2.6.2"
+  "peerDependencies": {
+    "react": ">= 16.8.0"
   },
-  "dependencies": {},
+  "devDependencies": {
+    "@size-limit/preset-small-lib": "4.5.5",
+    "@types/react": "16.9.43",
+    "react": "16.13.1",
+    "size-limit": "4.5.5",
+    "typescript": "3.9.7"
+  },
+  "size-limit": [
+    {
+      "path": "lib/index.js"
+    }
+  ],
   "homepage": "https://github.com/SanichKotikov/pinch-zoom-pan"
 }
