Disabled source maps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "removeComments": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true
+    "sourceMap": false
   },
   "include": [
     "src/**/*"
